fix the wrapper and the div spacing

--- a/src/Header.css
+++ b/src/Header.css
@@ -134,6 +134,7 @@
     letter-spacing: 0.2rem;
     font-size: 0.8rem;
     border-bottom: 0;
+    color: black;
     text-decoration: none;
 }
 
